--- a/project2-nodejs/package.json
+++ b/project2-nodejs/package.json
@@ -9,6 +9,7 @@
     "build": "tsc"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.12",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.13",
     "@typescript-eslint/eslint-plugin": "^5.27.0",
@@ -20,6 +21,8 @@
     "typescript": "^4.7.3"
   },
   "dependencies": {
+    "axios": "^0.27.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1"
   }
