--- a/project2-nodejs/package.json
+++ b/project2-nodejs/package.json
@@ -29,6 +29,7 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-fileupload": "^1.4.0",
-    "mongoose": "^6.3.5"
+    "mongoose": "^6.3.5",
+    "winston": "^3.7.2"
   }
 }
